--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Create and manage Pioneer Colony",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "git submodule update --init --recursive && cd src/lib/colonyNetwork && yarn",
+    "deploy-contracts": "cd src/lib/colonyNetwork && ./node_modules/.bin/truffle migrate --compile-all --reset",
+    "start-ganache": "cd src/lib/colonyNetwork && ganache-cli -d --gasLimit 7000000 --acctKeys ganache-accounts.json --noVMErrorsOnRPCResponse",
+    "start-trufflepig": "cd src/lib/colonyNetwork && trufflepig --ganacheKeyFile ganache-accounts.json",
+    "start": "node src/index",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,6 +29,24 @@
     "@colony/colony-js-client": "^1.5.3",
     "@colony/colony-js-contract-loader-http": "^1.4.1",
     "@colony/colony-js-contract-loader-network": "^1.0.3",
-    "ethers": "^3.0.24"
+    "eslint-plugin-import": "^2.13.0",
+    "ethers": "^3.0.24",
+    "web3": "^1.0.0-beta.34"
+  },
+  "devDependencies": {
+    "@colony/eslint-config-colony": "^4.0.1",
+    "babel-eslint": "^8.2.5",
+    "babel-jest": "^23.2.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "eslint": "^5.0.1",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-flowtype": "^2.49.3",
+    "eslint-plugin-prettier": "^2.6.1",
+    "ganache-cli": "^6.1.4",
+    "jest": "^23.2.0",
+    "prettier": "^1.13.6"
   }
 }
