--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@colony/colony-js-client": "^1.5.3",
     "@colony/colony-js-contract-loader-http": "^1.4.1",
     "@colony/colony-js-contract-loader-network": "^1.0.3",
+    "babel-cli": "^6.26.0",
     "eslint-plugin-import": "^2.13.0",
     "ethers": "^3.0.24",
+    "node-metamask": "^1.0.2",
     "web3": "^1.0.0-beta.34"
   },
   "devDependencies": {
